2009-08-14  Kazuhiko  <kazuhiko@fdiary.net>

	* hiki/page.rb (process): use String#bytesize instead of
	String#size if exists.

	* hiki/config.rb (load_cgi_conf): call eval() with binding, that
	is required for Ruby 1.9.

	* hiki/db/ptstore.rb: define commit_new if missing, that is
	required for Ruby 1.9.

	* hiki/db/tmarshal.rb: use Array#join instead of Array#to_s, whose
	specification is different between Ruby 1.8 and Ruby 1.9

2009-08-09  Kazuhiko  <kazuhiko@fdiary.net>
	* Hiki 0.8.8 released!

2009-08-08  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/util.rb (String): add a warning comment to notify that all
	instance methods added in String class will be obsoleted in the
	future release.

	* misc/plugin/amazon.rb: import tDiary's amazon.rb (rev.3501).

2009-08-05  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/hikidoc.rb: use recent hikidoc.rb (rev.110).

2009-08-04  okkez  <okkez000@gmail.com>
	* misc/plugin/attach/attach.cgi: use dot instead of double colon
	when call singleton methods.

2009-08-01  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/util.rb (Hiki::Util::sendmail): fix a typo (Hiki::Version
	-> Hiki::VERSION).

2009-07-28  okkez  <okkez000@gmail.com>
	* misc/plugin/history.rb (Hiki::History#history): uncomment. (see
	rev.942)

2009-07-28  okkez  <okkez000@gmail.com>
	* misc/plugin/history.rb: use dot instead double colon when call
	singleton meshods.

2009-07-28  Kazuhiko  <kazuhiko@fdiary.net>
	* plugin/00default.rb: use ::Hiki::VERSION instead of
	Hiki::VERSION.

	* misc/plugin/amazon.rb: import tDiary's amazon.rb (rev.3484).

2009-07-25  okkez  <okkez000@gmail.com>
	* contrib/plugin/rast-register.rb: delete trailing white spaces,
	fix indent.
	* contrib/plugin/rast-search.rb: ditto.
	* misc/plugin/attach.rb: ditto.
	* misc/plugin/attach/attach.cgi: ditto.
	* misc/plugin/auth_typekey.rb: ditto.
	* misc/plugin/bbs.rb: ditto.
	* misc/plugin/category.rb: ditto.
	* misc/plugin/comment.rb: ditto.
	* misc/plugin/diffmail.rb: ditto.