@@ -170,8 +170,14 @@ add_footer_proc {
 
 def hiki_footer
   s = %Q|Generated by <a href="http://hikiwiki.org/">Hiki</a> #{::Hiki::VERSION} (#{::Hiki::RELEASE_DATE}).<br>\nPowered by <a href="http://www.ruby-lang.org/">Ruby</a> #{RUBY_VERSION}|
-  s << %Q|-p#{RUBY_PATCHLEVEL}| rescue ''
-  s << %Q| (#{RUBY_RELEASE_DATE})#{if /ruby/i =~ ENV['GATEWAY_INTERFACE'] then ' with <a href="http://www.modruby.net/">mod_ruby</a>' end}.<br>\nFounded by #{@conf.author_name.escapeHTML}.<br>\n|
+  s << %Q|-p#{RUBY_PATCHLEVEL}| if RUBY_PATCHLEVEL > 0 rescue nil
+  s << %Q| (#{RUBY_RELEASE_DATE})|
+  if /ruby/i =~ ENV['GATEWAY_INTERFACE']
+    s << ' with <a href="http://www.modruby.net/">mod_ruby</a>'
+  elsif defined?(FCGI)
+    s << ' with <a href="http://raa.ruby-lang.org/project/fcgi/">ruby-fcgi</a>'
+  end
+  s << %Q|.<br>\nFounded by #{@conf.author_name.escapeHTML}.<br>\n|
 end
 
 #===== edit_proc
