@@ -1,4 +1,6 @@
 2009-08-14  Kazuhiko  <kazuhiko@fdiary.net>
+	* plugin/00default.rb (hiki_footer): display fcgi information in
+	footer.
 
 	* hiki/page.rb (process): use String#bytesize instead of
 	String#size if exists.
